# kaccounts-mobile

./: CMakeLists.txt  Messages.sh
common/: CMakeLists.txt
common/caldav-contacts-sync/: CMakeLists.txt  caldav-plugin.cpp  caldav-plugin.h
common/carddav-contacts-sync/: CMakeLists.txt  auth.cpp  carddav-plugin.cpp  carddav-plugin.h  requestgenerator.cpp  syncer.cpp
google/: CMakeLists.txt
google/google-contacts-sync/: CMakeLists.txt  google-contacts-plugin.cpp  google-contacts-plugin.h
services/: google-contacts.service.in  owncloud-calendar.service.in  owncloud-contacts.service.in
